_generated-doc/3.0/config/quarkus-flyway.adoc

:summaryTableId: quarkus-flyway
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-flyway_configuration]]link:#quarkus-flyway_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-flyway_quarkus.flyway.locations]]`link:#quarkus-flyway_quarkus.flyway.locations[quarkus.flyway.locations]`

[.description]
--
Comma-separated list of locations to scan recursively for migrations. The location type is determined by its prefix. 
Unprefixed locations or locations starting with classpath: point to a package on the classpath and may contain both SQL and Java-based migrations. 
Locations starting with filesystem: point to a directory on the filesystem, may only contain SQL migrations and are only scanned recursively down non-hidden directories.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_LOCATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_LOCATIONS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`db/migration`


a|icon:lock[title=Fixed at build time] [[quarkus-flyway_quarkus.flyway.callbacks]]`link:#quarkus-flyway_quarkus.flyway.callbacks[quarkus.flyway.callbacks]`

[.description]
--
Comma-separated list of fully qualified class names of Callback implementations to use to hook into the Flyway lifecycle. The `org.flywaydb.core.api.callback.Callback` subclass must have a no-args constructor and must not be abstract. These classes must also not have any fields that hold state (unless that state is initialized in the constructor).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CALLBACKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CALLBACKS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-flyway_quarkus.flyway.enabled]]`link:#quarkus-flyway_quarkus.flyway.enabled[quarkus.flyway.enabled]`

[.description]
--
Flag to enable / disable Flyway.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-flyway_quarkus.flyway.connect-retries]]`link:#quarkus-flyway_quarkus.flyway.connect-retries[quarkus.flyway.connect-retries]`

[.description]
--
The maximum number of retries when attempting to connect to the database. After each failed attempt, Flyway will wait 1 second before attempting to connect again, up to the maximum number of times specified by connectRetries.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CONNECT_RETRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CONNECT_RETRIES+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-flyway_quarkus.flyway.default-schema]]`link:#quarkus-flyway_quarkus.flyway.default-schema[quarkus.flyway.default-schema]`

[.description]
--
Sets the default schema managed by Flyway. This schema name is case-sensitive. If not specified, but _schemas_ is, Flyway uses the first schema in that list. If that is also not specified, Flyway uses the default schema for the database connection. 
Consequences:   
 - This schema will be the one containing the schema history table. 
 - This schema will be the default for the database connection (provided the database supports this concept).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_DEFAULT_SCHEMA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_DEFAULT_SCHEMA+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.schemas]]`link:#quarkus-flyway_quarkus.flyway.schemas[quarkus.flyway.schemas]`

[.description]
--
Comma-separated case-sensitive list of schemas managed by Flyway. The first schema in the list will be automatically set as the default one during the migration. It will also be the one containing the schema history table.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_SCHEMAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_SCHEMAS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-flyway_quarkus.flyway.table]]`link:#quarkus-flyway_quarkus.flyway.table[quarkus.flyway.table]`

[.description]
--
The name of Flyway's schema history table. By default (single-schema mode), the schema history table is placed in the default schema for the connection provided by the datasource. When the flyway.schemas property is set (multi-schema mode), the schema history table is placed in the first schema of the list.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_TABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_TABLE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.sql-migration-prefix]]`link:#quarkus-flyway_quarkus.flyway.sql-migration-prefix[quarkus.flyway.sql-migration-prefix]`

[.description]
--
The file name prefix for versioned SQL migrations. Versioned SQL migrations have the following file name structure: prefixVERSIONseparatorDESCRIPTIONsuffix , which using the defaults translates to V1.1__My_description.sql

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_SQL_MIGRATION_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_SQL_MIGRATION_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.repeatable-sql-migration-prefix]]`link:#quarkus-flyway_quarkus.flyway.repeatable-sql-migration-prefix[quarkus.flyway.repeatable-sql-migration-prefix]`

[.description]
--
The file name prefix for repeatable SQL migrations. Repeatable SQL migrations have the following file name structure: prefixSeparatorDESCRIPTIONsuffix , which using the defaults translates to R__My_description.sql

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_REPEATABLE_SQL_MIGRATION_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_REPEATABLE_SQL_MIGRATION_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.clean-at-start]]`link:#quarkus-flyway_quarkus.flyway.clean-at-start[quarkus.flyway.clean-at-start]`

[.description]
--
true to execute Flyway clean command automatically when the application starts, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CLEAN_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CLEAN_AT_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.clean-disabled]]`link:#quarkus-flyway_quarkus.flyway.clean-disabled[quarkus.flyway.clean-disabled]`

[.description]
--
true to prevent Flyway clean operations, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CLEAN_DISABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CLEAN_DISABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.clean-on-validation-error]]`link:#quarkus-flyway_quarkus.flyway.clean-on-validation-error[quarkus.flyway.clean-on-validation-error]`

[.description]
--
true to automatically call clean when a validation error occurs, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CLEAN_ON_VALIDATION_ERROR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CLEAN_ON_VALIDATION_ERROR+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.migrate-at-start]]`link:#quarkus-flyway_quarkus.flyway.migrate-at-start[quarkus.flyway.migrate-at-start]`

[.description]
--
true to execute Flyway automatically when the application starts, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_MIGRATE_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_MIGRATE_AT_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.repair-at-start]]`link:#quarkus-flyway_quarkus.flyway.repair-at-start[quarkus.flyway.repair-at-start]`

[.description]
--
true to execute a Flyway repair command when the application starts, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_REPAIR_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_REPAIR_AT_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.validate-at-start]]`link:#quarkus-flyway_quarkus.flyway.validate-at-start[quarkus.flyway.validate-at-start]`

[.description]
--
true to execute a Flyway validate command when the application starts, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_VALIDATE_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_VALIDATE_AT_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.run-and-exit]]`link:#quarkus-flyway_quarkus.flyway.run-and-exit[quarkus.flyway.run-and-exit]`

[.description]
--
true to quit exit right after the operation. The option is not meant be used directly by users.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_RUN_AND_EXIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_RUN_AND_EXIT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.baseline-on-migrate]]`link:#quarkus-flyway_quarkus.flyway.baseline-on-migrate[quarkus.flyway.baseline-on-migrate]`

[.description]
--
Enable the creation of the history table if it does not exist already.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_BASELINE_ON_MIGRATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_BASELINE_ON_MIGRATE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.baseline-version]]`link:#quarkus-flyway_quarkus.flyway.baseline-version[quarkus.flyway.baseline-version]`

[.description]
--
The initial baseline version.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_BASELINE_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_BASELINE_VERSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.baseline-description]]`link:#quarkus-flyway_quarkus.flyway.baseline-description[quarkus.flyway.baseline-description]`

[.description]
--
The description to tag an existing schema with when executing baseline.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_BASELINE_DESCRIPTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_BASELINE_DESCRIPTION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.validate-on-migrate]]`link:#quarkus-flyway_quarkus.flyway.validate-on-migrate[quarkus.flyway.validate-on-migrate]`

[.description]
--
Whether to automatically call validate when performing a migration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_VALIDATE_ON_MIGRATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_VALIDATE_ON_MIGRATE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-flyway_quarkus.flyway.out-of-order]]`link:#quarkus-flyway_quarkus.flyway.out-of-order[quarkus.flyway.out-of-order]`

[.description]
--
Allows migrations to be run "out of order".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_OUT_OF_ORDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_OUT_OF_ORDER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.ignore-missing-migrations]]`link:#quarkus-flyway_quarkus.flyway.ignore-missing-migrations[quarkus.flyway.ignore-missing-migrations]`

[.description]
--
Ignore missing migrations when reading the history table. When set to true migrations from older versions present in the history table but absent in the configured locations will be ignored (and logged as a warning), when false (the default) the validation step will fail.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_IGNORE_MISSING_MIGRATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_IGNORE_MISSING_MIGRATIONS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.ignore-future-migrations]]`link:#quarkus-flyway_quarkus.flyway.ignore-future-migrations[quarkus.flyway.ignore-future-migrations]`

[.description]
--
Ignore future migrations when reading the history table. When set to true migrations from newer versions present in the history table but absent in the configured locations will be ignored (and logged as a warning), when false (the default) the validation step will fail.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_IGNORE_FUTURE_MIGRATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_IGNORE_FUTURE_MIGRATIONS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.create-schemas]]`link:#quarkus-flyway_quarkus.flyway.create-schemas[quarkus.flyway.create-schemas]`

[.description]
--
Whether Flyway should attempt to create the schemas specified in the schemas property

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CREATE_SCHEMAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CREATE_SCHEMAS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-flyway_quarkus.flyway.placeholder-prefix]]`link:#quarkus-flyway_quarkus.flyway.placeholder-prefix[quarkus.flyway.placeholder-prefix]`

[.description]
--
Prefix of every placeholder (default: $++{++ )

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_PLACEHOLDER_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_PLACEHOLDER_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.placeholder-suffix]]`link:#quarkus-flyway_quarkus.flyway.placeholder-suffix[quarkus.flyway.placeholder-suffix]`

[.description]
--
Suffix of every placeholder (default: ++}++ )

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_PLACEHOLDER_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_PLACEHOLDER_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.init-sql]]`link:#quarkus-flyway_quarkus.flyway.init-sql[quarkus.flyway.init-sql]`

[.description]
--
The SQL statements to run to initialize a new database connection immediately after opening it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_INIT_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_INIT_SQL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.validate-migration-naming]]`link:#quarkus-flyway_quarkus.flyway.validate-migration-naming[quarkus.flyway.validate-migration-naming]`

[.description]
--
Whether to validate migrations and callbacks whose scripts do not obey the correct naming convention. A failure can be useful to check that errors such as case sensitivity in migration prefixes have been corrected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_VALIDATE_MIGRATION_NAMING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_VALIDATE_MIGRATION_NAMING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.ignore-migration-patterns]]`link:#quarkus-flyway_quarkus.flyway.ignore-migration-patterns[quarkus.flyway.ignore-migration-patterns]`

[.description]
--
Ignore migrations during validate and repair according to a given list of patterns (see https://flywaydb.org/documentation/configuration/parameters/ignoreMigrationPatterns for more information). When this configuration is set, the ignoreFutureMigrations and ignoreMissingMigrations settings are ignored. Patterns are comma separated.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_IGNORE_MIGRATION_PATTERNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_IGNORE_MIGRATION_PATTERNS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-flyway_quarkus.flyway.-named-data-sources-.locations]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.locations[quarkus.flyway."named-data-sources".locations]`

[.description]
--
Comma-separated list of locations to scan recursively for migrations. The location type is determined by its prefix. 
Unprefixed locations or locations starting with classpath: point to a package on the classpath and may contain both SQL and Java-based migrations. 
Locations starting with filesystem: point to a directory on the filesystem, may only contain SQL migrations and are only scanned recursively down non-hidden directories.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__LOCATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__LOCATIONS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`db/migration`


a|icon:lock[title=Fixed at build time] [[quarkus-flyway_quarkus.flyway.-named-data-sources-.callbacks]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.callbacks[quarkus.flyway."named-data-sources".callbacks]`

[.description]
--
Comma-separated list of fully qualified class names of Callback implementations to use to hook into the Flyway lifecycle. The `org.flywaydb.core.api.callback.Callback` subclass must have a no-args constructor and must not be abstract. These classes must also not have any fields that hold state (unless that state is initialized in the constructor).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CALLBACKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CALLBACKS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-flyway_quarkus.flyway.placeholders-placeholders]]`link:#quarkus-flyway_quarkus.flyway.placeholders-placeholders[quarkus.flyway.placeholders]`

[.description]
--
Sets the placeholders to replace in SQL migration scripts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_PLACEHOLDERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_PLACEHOLDERS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.connect-retries]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.connect-retries[quarkus.flyway."named-data-sources".connect-retries]`

[.description]
--
The maximum number of retries when attempting to connect to the database. After each failed attempt, Flyway will wait 1 second before attempting to connect again, up to the maximum number of times specified by connectRetries.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CONNECT_RETRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CONNECT_RETRIES+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.default-schema]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.default-schema[quarkus.flyway."named-data-sources".default-schema]`

[.description]
--
Sets the default schema managed by Flyway. This schema name is case-sensitive. If not specified, but _schemas_ is, Flyway uses the first schema in that list. If that is also not specified, Flyway uses the default schema for the database connection. 
Consequences:   
 - This schema will be the one containing the schema history table. 
 - This schema will be the default for the database connection (provided the database supports this concept).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__DEFAULT_SCHEMA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__DEFAULT_SCHEMA+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.schemas]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.schemas[quarkus.flyway."named-data-sources".schemas]`

[.description]
--
Comma-separated case-sensitive list of schemas managed by Flyway. The first schema in the list will be automatically set as the default one during the migration. It will also be the one containing the schema history table.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__SCHEMAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__SCHEMAS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.table]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.table[quarkus.flyway."named-data-sources".table]`

[.description]
--
The name of Flyway's schema history table. By default (single-schema mode), the schema history table is placed in the default schema for the connection provided by the datasource. When the flyway.schemas property is set (multi-schema mode), the schema history table is placed in the first schema of the list.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__TABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__TABLE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.sql-migration-prefix]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.sql-migration-prefix[quarkus.flyway."named-data-sources".sql-migration-prefix]`

[.description]
--
The file name prefix for versioned SQL migrations. Versioned SQL migrations have the following file name structure: prefixVERSIONseparatorDESCRIPTIONsuffix , which using the defaults translates to V1.1__My_description.sql

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__SQL_MIGRATION_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__SQL_MIGRATION_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.repeatable-sql-migration-prefix]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.repeatable-sql-migration-prefix[quarkus.flyway."named-data-sources".repeatable-sql-migration-prefix]`

[.description]
--
The file name prefix for repeatable SQL migrations. Repeatable SQL migrations have the following file name structure: prefixSeparatorDESCRIPTIONsuffix , which using the defaults translates to R__My_description.sql

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__REPEATABLE_SQL_MIGRATION_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__REPEATABLE_SQL_MIGRATION_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.clean-at-start]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.clean-at-start[quarkus.flyway."named-data-sources".clean-at-start]`

[.description]
--
true to execute Flyway clean command automatically when the application starts, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CLEAN_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CLEAN_AT_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.clean-disabled]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.clean-disabled[quarkus.flyway."named-data-sources".clean-disabled]`

[.description]
--
true to prevent Flyway clean operations, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CLEAN_DISABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CLEAN_DISABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.clean-on-validation-error]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.clean-on-validation-error[quarkus.flyway."named-data-sources".clean-on-validation-error]`

[.description]
--
true to automatically call clean when a validation error occurs, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CLEAN_ON_VALIDATION_ERROR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CLEAN_ON_VALIDATION_ERROR+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.migrate-at-start]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.migrate-at-start[quarkus.flyway."named-data-sources".migrate-at-start]`

[.description]
--
true to execute Flyway automatically when the application starts, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__MIGRATE_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__MIGRATE_AT_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.repair-at-start]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.repair-at-start[quarkus.flyway."named-data-sources".repair-at-start]`

[.description]
--
true to execute a Flyway repair command when the application starts, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__REPAIR_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__REPAIR_AT_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.validate-at-start]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.validate-at-start[quarkus.flyway."named-data-sources".validate-at-start]`

[.description]
--
true to execute a Flyway validate command when the application starts, false otherwise.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__VALIDATE_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__VALIDATE_AT_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.run-and-exit]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.run-and-exit[quarkus.flyway."named-data-sources".run-and-exit]`

[.description]
--
true to quit exit right after the operation. The option is not meant be used directly by users.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__RUN_AND_EXIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__RUN_AND_EXIT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.baseline-on-migrate]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.baseline-on-migrate[quarkus.flyway."named-data-sources".baseline-on-migrate]`

[.description]
--
Enable the creation of the history table if it does not exist already.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__BASELINE_ON_MIGRATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__BASELINE_ON_MIGRATE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.baseline-version]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.baseline-version[quarkus.flyway."named-data-sources".baseline-version]`

[.description]
--
The initial baseline version.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__BASELINE_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__BASELINE_VERSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.baseline-description]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.baseline-description[quarkus.flyway."named-data-sources".baseline-description]`

[.description]
--
The description to tag an existing schema with when executing baseline.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__BASELINE_DESCRIPTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__BASELINE_DESCRIPTION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.validate-on-migrate]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.validate-on-migrate[quarkus.flyway."named-data-sources".validate-on-migrate]`

[.description]
--
Whether to automatically call validate when performing a migration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__VALIDATE_ON_MIGRATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__VALIDATE_ON_MIGRATE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.out-of-order]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.out-of-order[quarkus.flyway."named-data-sources".out-of-order]`

[.description]
--
Allows migrations to be run "out of order".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__OUT_OF_ORDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__OUT_OF_ORDER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.ignore-missing-migrations]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.ignore-missing-migrations[quarkus.flyway."named-data-sources".ignore-missing-migrations]`

[.description]
--
Ignore missing migrations when reading the history table. When set to true migrations from older versions present in the history table but absent in the configured locations will be ignored (and logged as a warning), when false (the default) the validation step will fail.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__IGNORE_MISSING_MIGRATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__IGNORE_MISSING_MIGRATIONS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.ignore-future-migrations]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.ignore-future-migrations[quarkus.flyway."named-data-sources".ignore-future-migrations]`

[.description]
--
Ignore future migrations when reading the history table. When set to true migrations from newer versions present in the history table but absent in the configured locations will be ignored (and logged as a warning), when false (the default) the validation step will fail.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__IGNORE_FUTURE_MIGRATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__IGNORE_FUTURE_MIGRATIONS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.placeholders-placeholders]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.placeholders-placeholders[quarkus.flyway."named-data-sources".placeholders]`

[.description]
--
Sets the placeholders to replace in SQL migration scripts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__PLACEHOLDERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__PLACEHOLDERS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.create-schemas]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.create-schemas[quarkus.flyway."named-data-sources".create-schemas]`

[.description]
--
Whether Flyway should attempt to create the schemas specified in the schemas property

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CREATE_SCHEMAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CREATE_SCHEMAS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.placeholder-prefix]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.placeholder-prefix[quarkus.flyway."named-data-sources".placeholder-prefix]`

[.description]
--
Prefix of every placeholder (default: $++{++ )

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__PLACEHOLDER_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__PLACEHOLDER_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.placeholder-suffix]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.placeholder-suffix[quarkus.flyway."named-data-sources".placeholder-suffix]`

[.description]
--
Suffix of every placeholder (default: ++}++ )

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__PLACEHOLDER_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__PLACEHOLDER_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.init-sql]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.init-sql[quarkus.flyway."named-data-sources".init-sql]`

[.description]
--
The SQL statements to run to initialize a new database connection immediately after opening it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__INIT_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__INIT_SQL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.validate-migration-naming]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.validate-migration-naming[quarkus.flyway."named-data-sources".validate-migration-naming]`

[.description]
--
Whether to validate migrations and callbacks whose scripts do not obey the correct naming convention. A failure can be useful to check that errors such as case sensitivity in migration prefixes have been corrected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__VALIDATE_MIGRATION_NAMING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__VALIDATE_MIGRATION_NAMING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-flyway_quarkus.flyway.-named-data-sources-.ignore-migration-patterns]]`link:#quarkus-flyway_quarkus.flyway.-named-data-sources-.ignore-migration-patterns[quarkus.flyway."named-data-sources".ignore-migration-patterns]`

[.description]
--
Ignore migrations during validate and repair according to a given list of patterns (see https://flywaydb.org/documentation/configuration/parameters/ignoreMigrationPatterns for more information). When this configuration is set, the ignoreFutureMigrations and ignoreMissingMigrations settings are ignored. Patterns are comma separated.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__IGNORE_MIGRATION_PATTERNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__IGNORE_MIGRATION_PATTERNS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|

|===